<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/dark_gray"
    tools:context=".activities.AboutActivity">

    <ImageButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_arrow_back_ios_24"
        android:layout_marginStart="13dp"
        android:layout_marginTop="5dp"
        android:background="?android:attr/selectableItemBackground"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/back">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/about"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_app"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-light"
                android:textAlignment="center"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/tips"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tip_fifth"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-light"
                android:textAlignment="center"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tip_fst"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-light"
                android:textAlignment="center"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tip_sec"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-light"
                android:textAlignment="center"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tip_thrd"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-light"
                android:textAlignment="center"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tip_frth"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-light"
                android:textAlignment="center"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tip_sixth"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-light"
                android:textAlignment="center"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tip_seventh"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-light"
                android:textAlignment="center"
                android:layout_marginBottom="10dp"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>