<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/black"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:src="@drawable/kocmoc"
        android:contentDescription="@string/done"
        android:scaleType="centerCrop"/>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:layout_centerVertical="true"
        android:layout_above="@id/choiceCardView"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="5dp"/>


    <androidx.cardview.widget.CardView
        android:id="@+id/choiceCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_centerVertical="true"
        android:layout_marginEnd="20dp"
        app:cardBackgroundColor="@color/dark_gray"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:padding="10dp"
                android:text="@string/get_photo"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/btn_gallery"
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/image_button_background"
                android:contentDescription="@string/gallery"
                android:padding="13dp"
                android:src="@drawable/ic_gallery" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>