<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.BrushFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/operation_list_height"
        android:background="@color/dark_gray"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/brush_size"
                android:textColor="@color/white" />

            <SeekBar
                android:id="@+id/seek_bar_brush_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/opacity"
                android:textColor="@color/white" />

            <SeekBar
                android:id="@+id/seek_bar_opacity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_color"
            android:layout_width="match_parent"
            android:layout_height="80dp"></androidx.recyclerview.widget.RecyclerView>

        <ToggleButton
            android:id="@+id/btn_brush_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textOn="@string/brush"
            android:textOff="@string/eraser"
            android:background="@drawable/button_background"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-light"
            android:layout_marginTop="8dp"/>

    </LinearLayout>

</RelativeLayout>